<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch">

    <RelativeLayout
        style="@style/MatchMatch"
        android:background="@color/white_ffffff">

        <include
            android:id="@+id/in_title"
            layout="@layout/titlebar_white" />
        <LinearLayout
            android:id="@+id/lin_step"
            style="@style/MatchWrap.Horizontal"
            android:layout_below="@+id/in_title">
            <include
                layout="@layout/include_step"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_card"
            style="@style/MatchWrap.Vertical"
            android:layout_below="@+id/lin_step"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_25">

            <ImageView
                android:id="@+id/img_card_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/card_first"/>

            <TextView
                android:id="@+id/tv_card_first"
                style="@style/text_15_black_000000"
                android:text="@string/card_front"
                android:layout_marginTop="@dimen/margin_15"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/img_card_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30"
                android:src="@drawable/card_second"/>
            <TextView
                android:id="@+id/tv_card_second"
                style="@style/text_15_black_000000"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/card_behind"
                android:gravity="center"
                />
            <ImageView
                android:id="@+id/img_card_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30"
                android:src="@drawable/card_third"/>
            <TextView
                android:id="@+id/tv_card_third"
                style="@style/text_15_black_000000"
                android:text="@string/face_recognition"
                android:layout_marginTop="@dimen/margin_15"
                android:gravity="center"
                />
        </LinearLayout>

        <TextView
                android:id="@+id/tv_info"
                android:layout_below="@+id/lin_card"
                style="@style/text_13_gray_969696_h34"
                android:text="@string/people_info"
                android:drawableLeft="@drawable/people_info"
                android:layout_marginTop="@dimen/margin_30"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/distance_30"
                />
        <LinearLayout
            android:id="@+id/lin_info"
            android:layout_below="@+id/tv_info"
            style="@style/MatchWrap.Vertical"
            android:layout_marginRight="@dimen/distance_30"
            android:layout_marginLeft="@dimen/distance_30">

            <TextView
                android:id="@+id/tv_occupation"
                style="@style/text_14_black_000000"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:drawableRight="@drawable/arrow_down"
                android:gravity="center_vertical"
                android:hint="@string/occupation"
                android:paddingRight="@dimen/margin_5" />

            <include layout="@layout/include_line" />
            <TextView
                android:id="@+id/tv_education"
                style="@style/text_14_black_000000"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:gravity="center_vertical"
                android:hint="@string/education"
                android:paddingRight="@dimen/margin_5"
                android:drawableRight="@drawable/arrow_down"
                />
            <include layout="@layout/include_line" />
            <TextView
                android:id="@+id/tv_marital"
                style="@style/text_14_black_000000"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:gravity="center_vertical"
                android:hint="@string/marital"
                android:paddingRight="@dimen/margin_5"
                android:drawableRight="@drawable/arrow_down"
                />
            <include layout="@layout/include_line" />
            <TextView
                android:id="@+id/tv_house_type"
                style="@style/text_14_black_000000"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:gravity="center_vertical"
                android:hint="@string/house_type"
                android:drawableRight="@drawable/arrow_down"
                />
            <include layout="@layout/include_line" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_below="@+id/lin_info"
            style="@style/text_18_white"
            android:layout_marginBottom="@dimen/margin_25"
            android:layout_marginTop="@dimen/margin_34"
            android:layout_marginRight="@dimen/distance_30"
            android:layout_marginLeft="@dimen/distance_30"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height_45"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_gray"
            android:enabled="false"
            android:text="@string/next" />

    </RelativeLayout>

</ScrollView>